deployments/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: ui
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - port: 80
---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: capturetweet-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "12h"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/limit-rpm: "300"
#spec:
#  rules:
#    - host: beta.capturetweet.com
#      http:
#        paths:
#          - path: /api/.*
#            backend:
#              serviceName: capturetweet-backend-svc
#              servicePort: 4000
#          - path: /
#            backend:
#              serviceName: capturetweet-ui-svc
#              servicePort: 80
