deployments/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: capturetweet
  labels:
    app: mongodb
    version: v1
spec:
  selector:
    matchLabels:
      app: mongodb
      version: v1
  serviceName: mongo-svc
  replicas: 1
  template:
    metadata:
      name: mongo-ss
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: tcp-mongodb
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
          resources:
            limits:
              memory: 256Mi
              cpu: 300m
            requests:
              memory: 128Mi
              cpu: 150m
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linode-block-storage-retain
        resources:
          requests:
            storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: capturetweet
  labels:
    app: mongodb
    version: v1
spec:
  ports:
    - port: 27017
      name: tcp-mongodb
  selector:
    app: mongodb
    version: v1
