deployments/twitter-endpoint.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: twitter-svc-https
  namespace: capturetweet
spec:
  hosts:
    - api.twitter.com
    - twitter.com
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
